apps/ghostfolio/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ghostfolio
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ghostfolio.ramoneees.com`)
      kind: Rule
      services:
        - name: ghostfolio
          port: 3333
  tls:
    secretName: wildcard-ramoneees-com-tls
